fixed some bugs and hidden the search function on mobile

--- a/source/css/Z-last-cover-others.css
+++ b/source/css/Z-last-cover-others.css
@@ -49,16 +49,19 @@
     }
 
     code.has-numbering {
-        margin-left: 90px;
+        margin-left: 94px;
     }
     .pre-numbering {
-        width: 82px;
+        width: 86px;
     }
     .category-item time, .tag-item time, .archive-item time {
       position: relative;
       right: 0;
     }
 
+    .menu-item:last-of-type {
+    	display: none;
+    }
 
 }
 
@@ -130,15 +133,19 @@
     }
 
     code.has-numbering {
-        margin-left: 90px;
+        margin-left: 94px;
     }
     .pre-numbering {
-        width: 82px;
+        width: 86px;
     }
 
     .category-item time, .tag-item time, .archive-item time {
       position: relative;
       right: 0;
+    }
+
+    .menu-item:last-of-type {
+    	display: none;
     }
 
 }
